one line loops, appends

--- a/Assignment04.ipynb
+++ b/Assignment04.ipynb
@@ -6,7 +6,7 @@
       "name": "Assignment04.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNjpf7K5YSxCs4aKs0vmUnW",
+      "authorship_tag": "ABX9TyMEWf/czb2LChTDYppFmBo4",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -437,13 +437,86 @@
     {
       "cell_type": "code",
       "source": [
-        ""
+        "class Patient:\n",
+        "  def __init__(self,name,age):\n",
+        "    self.name=name\n",
+        "    self.age=age\n",
+        "    self.symptoms = []\n",
+        "\n",
+        "  def add_Symptom(self,*symps):\n",
+        "    for i in symps : self.symptoms.append(i)\n",
+        "  \n",
+        "  def printPatientDetail(self):\n",
+        "    print(f\"Name: {self.name}\")\n",
+        "    print(f\"Age: {self.age}\")\n",
+        "    container = ''\n",
+        "    for name in self.symptoms:\n",
+        "      if self.symptoms.index(name)!=len(self.symptoms)-1:\n",
+        "        container += name + ', '\n",
+        "      else:\n",
+        "        container += name\n",
+        "    print(container)\n",
+        "    print(f\"Symptoms: {container}\")\n",
+        "  \n",
+        "# Write your code here.\n",
+        "p1 = Patient(\"Thomas\", 23)\n",
+        "p1.add_Symptom(\"Headache\")\n",
+        "p2 = Patient(\"Carol\", 20)\n",
+        "p2.add_Symptom(\"Vomiting\", \"Coughing\")\n",
+        "p3 = Patient(\"Mike\", 25)\n",
+        "p3.add_Symptom(\"Fever\", \"Headache\", \"Coughing\")\n",
+        "print(\"=========================\")\n",
+        "p1.printPatientDetail()\n",
+        "print(\"=========================\")\n",
+        "p2.printPatientDetail()\n",
+        "print(\"=========================\")\n",
+        "p3.printPatientDetail()\n",
+        " \n",
+        "# OUTPUT:\n",
+        "# =========================\n",
+        "# Name: Thomas\n",
+        "# Age: 23\n",
+        "# Symptoms: Headache\n",
+        "# =========================\n",
+        "# Name: Carol\n",
+        "# Age: 20\n",
+        "# Symptoms: Vomiting, Coughing\n",
+        "# =========================\n",
+        "# Name: Mike\n",
+        "# Age: 25\n",
+        "# Symptoms: Fever, Headache, Coughing"
       ],
       "metadata": {
-        "id": "VFSt96MfbHS9"
+        "id": "VFSt96MfbHS9",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "d5b4ead4-11bc-4b7f-f6d7-cc8829dafc5d"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 16,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "=========================\n",
+            "Name: Thomas\n",
+            "Age: 23\n",
+            "Headache\n",
+            "Symptoms: Headache\n",
+            "=========================\n",
+            "Name: Carol\n",
+            "Age: 20\n",
+            "Vomiting, Coughing\n",
+            "Symptoms: Vomiting, Coughing\n",
+            "=========================\n",
+            "Name: Mike\n",
+            "Age: 25\n",
+            "Fever, Headache, Coughing\n",
+            "Symptoms: Fever, Headache, Coughing\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -457,13 +530,84 @@
     {
       "cell_type": "code",
       "source": [
-        ""
+        "class Match:\n",
+        "  def __init__(self,x):\n",
+        "    self.team1 = x.split('-')[0]\n",
+        "    self.team2 = x.split('-')[1]\n",
+        "    self.over = 0\n",
+        "    self.run = 0\n",
+        "    self.wicket = 0\n",
+        "    print('5..4..3..2..1.. Play !!!')\n",
+        "\n",
+        "  def print_scoreboard(self):\n",
+        "    return f\"Batting Team: {self.team1} \\nBowling Team: {self.team2} \\nTotal Runs: {self.run} Wickets: {self.wicket} Overs: {self.over}\"\n",
+        "\n",
+        "  def add_run(self,x):\n",
+        "    self.run += x\n",
+        "\n",
+        "  def add_over(self,x):\n",
+        "    if x >= 5:\n",
+        "      print(f\"Warning! Cannot add {x} over/s ({x} over match)\")    \n",
+        "    else:\n",
+        "      self.over += x\n",
+        "      self.run += 1\n",
+        "\n",
+        "  def add_wicket(self,x):\n",
+        "    self.wicket += x\n",
+        "\n",
+        "# Write your code here.\n",
+        "match1 = Match(\"Rangpur Riders-Cumilla Victorians\")\n",
+        "print(\"=========================\")\n",
+        "match1.add_run(4)\n",
+        "match1.add_run(6)\n",
+        "match1.add_over(1)\n",
+        "print(match1.print_scoreboard())\n",
+        "print(\"=========================\")\n",
+        "match1.add_over(5)\n",
+        "print(\"=========================\")\n",
+        "match1.add_wicket(1)\n",
+        "print(match1.print_scoreboard())\n",
+        "\n",
+        "# OUTPUT:\n",
+        "# 5..4..3..2..1.. Play !!!\n",
+        "# ============================\n",
+        "# Batting Team: Rangpur Riders\n",
+        "# Bowling Team: Cumilla Victorians\n",
+        "# Total Runs: 11 Wickets: 0 Overs: 1\n",
+        "# ============================\n",
+        "# Warning! Cannot add 5 over/s (5 over match)\n",
+        "# ============================\n",
+        "# Batting Team: Rangpur Riders\n",
+        "# Bowling Team: Cumilla Victorians\n",
+        "# Total Runs: 11 Wickets: 1 Overs: 1"
       ],
       "metadata": {
-        "id": "t8GkMwRAR80s"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "t8GkMwRAR80s",
+        "outputId": "b0b75bb7-25b0-4399-cc7f-b59d4739717f"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 43,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "5..4..3..2..1.. Play !!!\n",
+            "=========================\n",
+            "Batting Team: Rangpur Riders \n",
+            "Bowling Team: Cumilla Victorians \n",
+            "Total Runs: 11 Wickets: 0 Overs: 1\n",
+            "=========================\n",
+            "Warning! Cannot add 5 over/s (5 over match)\n",
+            "=========================\n",
+            "Batting Team: Rangpur Riders \n",
+            "Bowling Team: Cumilla Victorians \n",
+            "Total Runs: 11 Wickets: 1 Overs: 1\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -477,7 +621,54 @@
     {
       "cell_type": "code",
       "source": [
-        ""
+        "class ParcelKoro:\n",
+        "  def __init__(self,name='No name set',no=0):\n",
+        "    self.product_weight = no\n",
+        "    self.name = name\n",
+        "  \n",
+        "  def calculateFee(self):\n",
+        "    pass\n",
+        "  \n",
+        "  def printDetails(self):\n",
+        "    print(f\"Customer Name: No name set\")\n",
+        "    print(f\"Product Weight: 0\")\n",
+        "    print(f\"Total fee: 0\")\n",
+        "\n",
+        "# Write your code here.\n",
+        "print(\"**********************\")\n",
+        "p1 = ParcelKoro()\n",
+        "p1.calculateFee()\n",
+        "p1.printDetails()\n",
+        "print(\"**********************\")\n",
+        "p2 = ParcelKoro('Bob The Builder')\n",
+        "p2.calculateFee()\n",
+        "p2.printDetails()\n",
+        "print(\"----------------------------\")\n",
+        "p2.product_weight = 15\n",
+        "p2.calculateFee()\n",
+        "p2.printDetails(\n",
+        "print(\"**********************\")\n",
+        "p3 = ParcelKoro('Dora The Explorer', 10)\n",
+        "p3.calculateFee('Dhanmondi')\n",
+        "p3.printDetails()\n",
+        "\n",
+        "# OUTPUT:\n",
+        "# **********************\n",
+        "# Customer Name: No name set\n",
+        "# Product Weight: 0\n",
+        "# Total fee: 0\n",
+        "# **********************\n",
+        "# Customer Name: Bob The Builder\n",
+        "# Product Weight: 0\n",
+        "# Total fee: 0\n",
+        "# ----------------------------\n",
+        "# Customer Name: Bob The Builder\n",
+        "# Product Weight: 15\n",
+        "# Total fee: 350\n",
+        "# **********************\n",
+        "# Customer Name: Dora The Explorer\n",
+        "# Product Weight: 10\n",
+        "# Total fee: 300"
       ],
       "metadata": {
         "id": "Bt7bCBQWSArY"
@@ -607,7 +798,10 @@
       "source": [
         "class Author:\n",
         "  def __init__(self,*authors):\n",
-        "    self.name = authors\n",
+        "    if len(authors) == 0:\n",
+        "      self.name = 'Default'\n",
+        "    else:\n",
+        "      self.name = authors\n",
         "    self.books = []\n",
         "    if len(authors)>1:\n",
         "      for i in authors:\n",
@@ -627,9 +821,9 @@
         "      print(f'Author Name: {self.name[0]}')\n",
         "    print(f'--------')\n",
         "    print(f'List of Books:')\n",
-        "    for book in self.books:\n",
-        "      print(book)\n",
-        "\n",
+        "    for book in self.books : print(book)\n",
+        "    # print([book*69 for book in self.books if book!='uwu'])\n",
+        "    # [0, 4, 16, 36, 64]\n",
         "auth1 = Author('Humayun Ahmed')\n",
         "auth1.addBooks('Deyal', 'Megher Opor Bari')\n",
         "auth1.printDetails()\n",
@@ -664,16 +858,16 @@
         "# --------\n",
         "# List of Books:\n",
         "# The Alchemist\n",
-        "# The Fifth Mountain\n"
+        "# The Fifth Mountain"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "ToIQLfSScV1f",
-        "outputId": "a00a6ae5-202f-45ed-a38c-97faa09c971e"
+        "outputId": "b4c9cbee-afdb-40a1-9c96-bb23674591ac"
       },
-      "execution_count": null,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "stream",
@@ -685,7 +879,7 @@
             "Deyal\n",
             "Megher Opor Bari\n",
             "===================\n",
-            "()\n",
+            "Default\n",
             "===================\n",
             "Author Name: Mario Puzo\n",
             "--------\n",
