very small book library

--- a/OOP_4.ipynb
+++ b/OOP_4.ipynb
@@ -6,7 +6,7 @@
       "name": "OOP_4.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyM4lZT9kOFtqlu0tAZcMKv/",
+      "authorship_tag": "ABX9TyM3tWVxxzpl8opuc286Hjcz",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1544,7 +1544,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "LOakSiJPgPWB",
-        "outputId": "ee4f9cd9-cbda-4381-c9d1-917233875115"
+        "outputId": "1486f0f7-32df-4cef-f8ac-a5846b8d6232"
       },
       "execution_count": null,
       "outputs": [
@@ -1580,39 +1580,49 @@
     {
       "cell_type": "code",
       "source": [
-        "class Test5:\n",
+        "class Test4:\n",
         "  def __init__(self):\n",
-        "    self.sum = 0\n",
-        "    self.y = 0\n",
+        "    self.sum, self.y = 0, 0\n",
         "  def methodA(self):\n",
-        "    x=y=k=0\n",
-        "    msg = [5]\n",
-        "    while (k < 2):\n",
-        "      y += msg[0]\n",
-        "      x = y + self.methodB(msg, k)\n",
-        "      self.sum = x + y + msg[0]\n",
-        "      print(x ,\" \" , y, \" \" , self.sum)\n",
-        "      k+=1\n",
-        "  def methodB(self, mg2, mg1):\n",
-        "    x = 0\n",
-        "    self.y += mg2[0]\n",
-        "    x = x + 3 + mg1\n",
-        "    self.sum += x + self.y\n",
-        "    mg2[0] = self.y + mg1\n",
-        "    mg1 += x + 2\n",
-        "    print(x , \" \" ,self.y, \" \" , self.sum)\n",
-        "    return mg1\n",
-        "t1 = Test5()\n",
-        "t1.methodA()\n",
-        "t1.methodA()\n",
-        "t1.methodA()"
+        "    x, y = 0, 0\n",
+        "    msg = [0]\n",
+        "    msg[0] = 5\n",
+        "    y = y + self.methodB(msg[0])\n",
+        "    x = y + self.methodB(msg, msg[0])\n",
+        "    self.sum = x + y + msg[0]\n",
+        "    print(x, y, self.sum)\n",
+        "  def methodB(self, *args):\n",
+        "    if len(args) == 1:\n",
+        "      mg1 = args[0]\n",
+        "      x, y = 0, 0\n",
+        "      y = y + mg1\n",
+        "      x = x + 33 + mg1\n",
+        "      self.sum = self.sum + x + y\n",
+        "      self.y = mg1 + x + 2\n",
+        "      print(x, y, self.sum)\n",
+        "      return y\n",
+        "    else:\n",
+        "      mg2, mg1 = args\n",
+        "      x = 0\n",
+        "      self.y = self.y + mg2[0]\n",
+        "      x = x + 33 + mg1\n",
+        "      self.sum = self.sum + x + self.y\n",
+        "      mg2[0] = self.y + mg1\n",
+        "      mg1 = mg1 + x + 2\n",
+        "      print(x, self.y, self.sum)\n",
+        "      return self.sum\n",
+        "t3 = Test4()\n",
+        "t3.methodA()\n",
+        "t3.methodA()\n",
+        "t3.methodA()\n",
+        "t3.methodA()"
       ],
       "metadata": {
         "id": "UieZL--dgPZd",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "25fc4d88-5a77-4230-f3e6-dcf16bb12413"
+        "outputId": "5c30ea04-a8cd-4d2d-83dc-a9701575e627"
       },
       "execution_count": null,
       "outputs": [
@@ -1620,18 +1630,18 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "3   5   8\n",
-            "10   5   20\n",
-            "4   10   34\n",
-            "17   10   38\n",
-            "3   15   56\n",
-            "10   5   30\n",
-            "4   30   64\n",
-            "27   20   78\n",
-            "3   35   116\n",
-            "10   5   50\n",
-            "4   70   124\n",
-            "47   40   158\n"
+            "38 5 43\n",
+            "38 50 131\n",
+            "136 5 196\n",
+            "38 5 239\n",
+            "38 50 327\n",
+            "332 5 392\n",
+            "38 5 435\n",
+            "38 50 523\n",
+            "528 5 588\n",
+            "38 5 631\n",
+            "38 50 719\n",
+            "724 5 784\n"
           ]
         }
       ]
@@ -1887,13 +1897,109 @@
     {
       "cell_type": "code",
       "source": [
-        ""
+        "class Author:\n",
+        "  def __init__(self,name=None):\n",
+        "    self.authorName = name\n",
+        "    self.Sbooks = []\n",
+        "    self.Hbooks = []\n",
+        "    self.others = []\n",
+        "  \n",
+        "  def addBook(self,book,genre):\n",
+        "    if self.authorName == None:\n",
+        "      print(\"A book can not be added without author name\")\n",
+        "    else:\n",
+        "      if genre == \"Horror\":\n",
+        "        self.Hbooks.append(book)\n",
+        "      elif genre == \"Science Fiction\":\n",
+        "        self.Sbooks.append(book)\n",
+        "      else:\n",
+        "        self.others.append(book)\n",
+        "\n",
+        "  def setName(self,name):\n",
+        "    self.authorName = name\n",
+        "  \n",
+        "  def printDetail(self):\n",
+        "    containerH = \"\"\n",
+        "    containerS = \"\"\n",
+        "    for book in self.Hbooks: containerH += book + \", \"\n",
+        "    for book in self.Sbooks: containerS += book + \", \"\n",
+        "    print(f\"Number of Book(s): {len(self.Sbooks)+len(self.Hbooks)}\")\n",
+        "    print(f\"Author Name: {self.authorName}\")\n",
+        "    if len(self.Sbooks)>0: print(f\"Science Fiction: {containerS[:-2:]}\")\n",
+        "    if len(self.Hbooks)>0: print(f\"Horror: {containerH[:-2:]}\")\n",
+        "      \n",
+        "a1 = Author()\n",
+        "print(\"=================================\")\n",
+        "a1.addBook(\"Ice\", \"Science Fiction\")\n",
+        "print(\"=================================\")\n",
+        "a1.setName(\"Anna Kavan\")\n",
+        "a1.addBook(\"Ice\", \"Science Fiction\")\n",
+        "a1.printDetail()\n",
+        "print(\"=================================\")\n",
+        "a2 = Author(\"Humayun Ahmed\")\n",
+        "a2.addBook(\"Onnobhubon\", \"Science Fiction\")\n",
+        "a2.addBook(\"Megher Upor Bari\", \"Horror\")\n",
+        "print(\"=================================\")\n",
+        "a2.printDetail()\n",
+        "a2.addBook(\"Ireena\", \"Science Fiction\")\n",
+        "print(\"=================================\")\n",
+        "a2.printDetail()\n",
+        "print(\"=================================\")\n",
+        "\n",
+        "# Output\n",
+        "# =================================\n",
+        "# A book can not be added without author name\n",
+        "# =================================\n",
+        "# Number of Book(s): 1\n",
+        "# Author Name: Anna Kavan\n",
+        "# Science Fiction: Ice\n",
+        "# =================================\n",
+        "# =================================\n",
+        "# Number of Book(s): 2\n",
+        "# Author Name: Humayun Ahmed\n",
+        "# Science Fiction: Onnobhubon\n",
+        "# Horror: Megher Upor Bari\n",
+        "# =================================\n",
+        "# Number of Book(s): 3\n",
+        "# Author Name: Humayun Ahmed\n",
+        "# Science Fiction: Onnobhubon, Ireena\n",
+        "# Horror: Megher Upor Bari\n",
+        "# ================================="
       ],
       "metadata": {
-        "id": "5ZZbV5PUP7lF"
+        "id": "5ZZbV5PUP7lF",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "0d720088-eb88-4375-850b-6ffb6caf337c"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "=================================\n",
+            "A book can not be added without author name\n",
+            "=================================\n",
+            "Number of Book(s): 1\n",
+            "Author Name: Anna Kavan\n",
+            "Science Fiction: Ice\n",
+            "=================================\n",
+            "=================================\n",
+            "Number of Book(s): 2\n",
+            "Author Name: Humayun Ahmed\n",
+            "Science Fiction: Onnobhubon\n",
+            "Horror: Megher Upor Bari\n",
+            "=================================\n",
+            "Number of Book(s): 3\n",
+            "Author Name: Humayun Ahmed\n",
+            "Science Fiction: Onnobhubon, Ireena\n",
+            "Horror: Megher Upor Bari\n",
+            "=================================\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -1907,13 +2013,141 @@
     {
       "cell_type": "code",
       "source": [
-        ""
+        "class Hospital:\n",
+        "  def __init__(self,n):\n",
+        "    self.name = n\n",
+        "    self.doctors = {}\n",
+        "    self.patients = {}\n",
+        "\n",
+        "  def addDoctor(self,d):\n",
+        "    self.doctors[d.id] = d\n",
+        "  \n",
+        "  def getDoctorByID(self,id):\n",
+        "    return f\"Doctor's ID: {self.doctors[id].id}\\nName: {self.doctors[id].name}\\nSpeciality: {self.doctors[id].spe}\"\n",
+        "  \n",
+        "  def addPatient(self,p1):\n",
+        "    self.patients[p1.id] = p1\n",
+        "\n",
+        "  def getPatientByID(self,id):\n",
+        "    return f\"Patient's ID: {self.patients[id].id}\\nName: {self.patients[id].name}\\nAge:{self.patients[id].age}\\nPhone no.: {self.patients[id].no}\"\n",
+        "    \n",
+        "\n",
+        "  def allDoctors(self):\n",
+        "    print(\"All Doctors:\")\n",
+        "    print(f\"Number of Doctors: {len(self.doctors.keys())}\")\n",
+        "    alldoctors = {}\n",
+        "    for value in self.doctors.values():\n",
+        "      alldoctors[value.id] = [value.name,value.spe]\n",
+        "    print(alldoctors)\n",
+        "  \n",
+        "  def allPatients(self):\n",
+        "    print(\"All Patients:\")\n",
+        "    print(f\"Number of Patients: {len(self.patients.keys())}\")\n",
+        "    allP = {}\n",
+        "    for value in self.patients.values():\n",
+        "      allP[value.id] = [value.name,value.age,value.no]\n",
+        "    print(allP)\n",
+        "\n",
+        "class Doctor:\n",
+        "  def __init__(self,id,pro,name,spe):\n",
+        "    self.id = id\n",
+        "    self.pro = pro\n",
+        "    self.name = name\n",
+        "    self.spe = spe\n",
+        "\n",
+        "class Patient:\n",
+        "  def __init__(self,id,pro,name,age,no) :\n",
+        "    self.id = id\n",
+        "    self.pro = pro\n",
+        "    self.name = name\n",
+        "    self.age = age\n",
+        "    self.no = no\n",
+        "\n",
+        "h = Hospital(\"Evercare\")\n",
+        "d1 = Doctor(\"1d\",\"Doctor\", \"Samar Kumar\", \"Neurologist\")\n",
+        "h.addDoctor(d1)\n",
+        "print(\"=================================\")\n",
+        "print(h.getDoctorByID(\"1d\"))\n",
+        "print(\"=================================\")\n",
+        "p1 = Patient(\"1p\",\"Patient\", \"Kashem Ahmed\", 35, 12345)\n",
+        "h.addPatient(p1)\n",
+        "print(\"=================================\")\n",
+        "print(h.getPatientByID(\"1p\"))\n",
+        "print(\"=================================\")\n",
+        "p2 = Patient (\"2p\",\"Patient\", \"Tanina Haque\", 26, 33456)\n",
+        "h.addPatient(p2)\n",
+        "print(\"=================================\")\n",
+        "print(h.getPatientByID(\"2p\"))\n",
+        "print(\"=================================\")\n",
+        "h.allDoctors()\n",
+        "h.allPatients()\n",
+        "\n",
+        "# Output\n",
+        "# =================================\n",
+        "# Doctor's ID: 1d\n",
+        "# Name: Samar Kumar\n",
+        "# Speciality: Neurologist\n",
+        "# =================================\n",
+        "# =================================\n",
+        "# Patient's ID: 1p\n",
+        "# Name: Kashem Ahmed\n",
+        "# Age: 35\n",
+        "# Phone no.: 12345\n",
+        "# =================================\n",
+        "# =================================\n",
+        "# Patient's ID: 2p\n",
+        "# Name: Tanina Haque\n",
+        "# Age: 26\n",
+        "# Phone no.: 33456\n",
+        "# =================================\n",
+        "# All Doctors:\n",
+        "# Number of Doctors: 1\n",
+        "# {'1d': ['Samar Kumar', 'Neurologist']}\n",
+        "# All Patients:\n",
+        "# Number of Patients: 2\n",
+        "# {'1p': ['Kashem Ahmed', 35, 12345], '2p':\n",
+        "# ['Tanina\n",
+        "# Haque', 26, 33456]}"
       ],
       "metadata": {
-        "id": "jGDmGNwTQWcH"
+        "id": "jGDmGNwTQWcH",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "18bfbcad-5f39-4835-c2f9-b14d42065cc5"
       },
       "execution_count": null,
-      "outputs": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "=================================\n",
+            "Doctor's ID: 1d\n",
+            "Name: Samar Kumar\n",
+            "Speciality: Neurologist\n",
+            "=================================\n",
+            "=================================\n",
+            "Patient's ID: 1p\n",
+            "Name: Kashem Ahmed\n",
+            "Age:35\n",
+            "Phone no.: 12345\n",
+            "=================================\n",
+            "=================================\n",
+            "Patient's ID: 2p\n",
+            "Name: Tanina Haque\n",
+            "Age:26\n",
+            "Phone no.: 33456\n",
+            "=================================\n",
+            "All Doctors:\n",
+            "Number of Doctors: 1\n",
+            "{'1d': ['Samar Kumar', 'Neurologist']}\n",
+            "All Patients:\n",
+            "Number of Patients: 2\n",
+            "{'1p': ['Kashem Ahmed', 35, 12345], '2p': ['Tanina Haque', 26, 33456]}\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
